Suppression de la partie bonus dans le code html

--- a/cv.html
+++ b/cv.html
@@ -70,11 +70,7 @@
 			</p>
 			</br>
 			
-		<h3>Bonus</h3>
-			<p>
-				Je suis également doué à Super smash Bros Melee =)
-				</br>J'ai tout appris sur le site du zéro (avec Zozor)
-				</br><img src="images/zozor.png" alt="Tu ne me reconnais pas ? C'est moi zozor !" />
+			<!-- Plus de partie bonus-->
 			</p>
     </body>
 </html>
