Modification du script HTML pour pouvoir intégrer du CSS

--- a/cv.html
+++ b/cv.html
@@ -2,12 +2,16 @@
 <html>
     <head>
         <meta charset="utf-8" />
+		<link rel="stylesheet" href="style.css" />
         <title>Mon CV</title>
     </head>
 
     <body>
 		<h1>Guillaume FRANCOIS</h1>
-		<p>Etudiant OpenClassrooms</p>
+		<div id="description">
+			<p>Etudiant OpenClassrooms</p>
+		</div>
+		
 		</br><a href="images/image_profil.png"><img src="images/image_profil_resized.png" alt="Moi" title="Cliquez pour agrandir" /></a>
 		</br>
 		<h2>Profil</h2>
@@ -20,55 +24,62 @@
 		</p>
 		</br>
 		
-		<h2>Mon expérience</h2>
-			<li>
-				<strong>2017-2018 :</strong> Etudiant OpenClassrooms, plateforme de formation en ligne
-				(leader européen)
-				</br>Parcours diplômant : Développeur d'application - Java 
-			</li>
-			<li>
-				<strong>2016-2017 :</strong> Ecole ECAM (Rennes) :
-				</br>1ère année d'ingénieur (étudiant)
-			</li>
-			<li>
-				<strong>2014-2016 :</strong> Lycée Leconte de Lisle (Saint-Denis, Réunion) :
-				</br>CPGE 1 : MPSI (option SI)
-				</br>CPGE 2 : PSI
-				</br>(Passage des concours e3a et CCP)
-			</li>
-			</br>
-		<h2>Mes compétences</h2>
-			<p>
-				<li>HTML5</li>
-				<li>CSS3</li>
-				<li>PHP (pas encore de certificat)</li>
-				<li>Bases en Java</li>
-			</p>
-			</br>
-		<h2>Mes formations</h2>
-			<p>
+		<div class="boite">
+			<h2>Mon expérience</h2>
 				<li>
-					<strong>Aujourd'hui</strong>
-					</br>Parcours diplomant sur OpenClassrooms : <a href="https://openclassrooms.com/paths/developpeur-se-d-application-java">Developpeur d'application Java</a>
+					<strong>2017-2018 :</strong> Etudiant OpenClassrooms, plateforme de formation en ligne
+					(leader européen)
+					</br>Parcours diplômant : Développeur d'application - Java 
 				</li>
 				<li>
-					<strong>2017 - Stage à l'étranger - 3mois</strong>
-					</br>
-					Stage à Malte dans une entreprise nommé Popeye Village, petit centre
-					d'attractions, de détente au bord de mer avec activités/spectacles.
-					</br><img src="images/fleche.png" alt="Flèche" />
-					<em>Développer son niveau en Anglais avec les relations avec le personnel et clients</em>
+					<strong>2016-2017 :</strong> Ecole ECAM (Rennes) :
+					</br>1ère année d'ingénieur (étudiant)
 				</li>
 				<li>
-					<strong>2014 - La piscine</strong>
-					</br>
-					Stage en entreprise sur un site évènmentiel, dans l'organisation de
-					mariages, galas, baptêmes, comités d'entreprises.
-					</br><img src="images/fleche.png" alt="Flèche" />
-					<em>Gérer du personnel et les attentes du client avant et pendant l'évènement</em>
+					<strong>2014-2016 :</strong> Lycée Leconte de Lisle (Saint-Denis, Réunion) :
+					</br>CPGE 1 : MPSI (option SI)
+					</br>CPGE 2 : PSI
+					</br>(Passage des concours e3a et CCP)
 				</li>
-			</p>
-			</br>
+				</br>
+		</div>
+		<div class="boite">
+			<h2>Mes compétences</h2>
+				<p>
+					<li>HTML5</li>
+					<li>CSS3</li>
+					<li>PHP (pas encore de certificat)</li>
+					<li>Bases en Java</li>
+				</p>
+				</br>
+		</div>
+		<div class="boite">
+			<h2>Mes formations</h2>
+				<p>
+					<li>
+						<strong>Aujourd'hui</strong>
+						</br>Parcours diplomant sur OpenClassrooms : <a href="https://openclassrooms.com/paths/developpeur-se-d-application-java">Developpeur d'application Java</a>
+					</li>
+					<li>
+						<strong>2017 - Stage à l'étranger - 3mois</strong>
+						</br>
+						Stage à Malte dans une entreprise nommé Popeye Village, petit centre
+						d'attractions, de détente au bord de mer avec activités/spectacles.
+						</br><img src="images/fleche.png" alt="Flèche" />
+						<em>Développer son niveau en Anglais avec les relations avec le personnel et clients</em>
+					</li>
+					<li>
+						<strong>2014 - La piscine</strong>
+						</br>
+						Stage en entreprise sur un site évènmentiel, dans l'organisation de
+						mariages, galas, baptêmes, comités d'entreprises.
+						</br><img src="images/fleche.png" alt="Flèche" />
+						<em>Gérer du personnel et les attentes du client avant et pendant l'évènement</em>
+					</li>
+				</p>
+				</br>
+		</div>
+		
 			
 			<!-- Plus de partie bonus-->
 			</p>
